fix gaps and padding for `updates`

--- a/css/updates.scss
+++ b/css/updates.scss
@@ -16,7 +16,7 @@
 
     .card {
       border-radius: 12px;
-      padding: 10px;
+      padding: 20px;
       transition: transform 0.3s ease;
 
       h3 {
